...
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="answers_is_1">1</string>
    <string name="answers_is_5">5</string>
    <string name="answers_is_6">6</string>
    <string name="answers_is_7">7</string>
    <string name="answers_is_no_answer">No Answer</string>
    <string name="answers_is_2">2</string>
    <string name="answers_is_3">3</string>
    <string name="answers_is_4">4</string>
    <string name="course_name">Course name:</string>
    <string name="term">Exam:</string>
    <string name="term_a">A</string>
...
    <string name="create_exam_dialog_ok">OK</string>
    <string name="home_would_you_like_to_resume">Would you like resume your last session?</string>
    <string name="home_dialog_yes">Yes</string>
    <string name="detect_corners_version_number_hint">version#</string>
    <string name="detect_corners_please_choose_version">Please choose version</string>
    <string name="detect_corners_ok">OK</string>
    <string name="detect_corners_the_empty_version_choice">Choose version</string>
    <string name="add_version_action">Add</string>
    <string name="menu_logout">Logout</string>
    <string name="button_main_activity_logout">Logout</string>
    <string name="nums_questions">Number of questions:</string>
    <string name="create_exam_dialog_version_scanned_result">Scanning result</string>
    <string name="create_exam_version_scanned_dialog_confirm">Confirm</string>
...
