...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    <Spinner-->
    <!--        android:id="@+id/spinner_detect_corners_version_num"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:ems="10"-->
    <!--        android:gravity="center"-->
    <!--        android:hint="@string/detect_corners_version_number_hint"-->
    <!--        android:inputType="number"-->
...
