...
        android:text="@string/version_add_version"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <EditText
        android:id="@+id/editText_create_exam_version_number"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:inputType="number"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_create_exam_upload_version_image"
        app:layout_constraintStart_toEndOf="@+id/textView_create_exam_version_num"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <Button
        android:id="@+id/button_create_exam_upload_version_image"
        android:layout_width="120dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:text="@string/choose_pdf"
        app:layout_constraintBottom_toTopOf="@+id/button_create_exam_add_version"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView_create_exam_version_num" />

    <TextView
        android:id="@+id/textView_create_exam_version_num"
        android:layout_width="63dp"
        android:layout_height="51dp"
        android:text="@string/version_number"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <TextView
        android:id="@+id/textView_number_of_versions_added"
        android:layout_width="28dp"
        android:layout_height="32dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="12dp"
        android:autoSizeTextType="uniform"
        android:ems="10"
...
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline13"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_create_exam_num_of_questions"
        android:layout_width="85dp"
        android:layout_height="39dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:inputType="number"
...
